


[package]
name = "buildr"
version = "0.1.0"
authors = [ "David Boon <david.boon@gmail.com" ]


description = "A distributed scheduling and system"
readme = "README.md"
keywords = ["continuous delivery", "build"]

homepage = "https://github.com/evadnoob/rustoleum"
repository = "https://github.com/evadnoob/rustoleum"
documentation = "https://evadnoob.github.io/rustoleum/"

license = "MIT"

[dependencies]
hyper = "0.5.0"
docopt = "*"
rustc-serialize = "*"
log = "0.3.1"
env_logger = "0.3.1"
time = "0.1"
libc = "0.1"

[dependencies.readline]
git = "https://github.com/evadnoob/rust-readline.git"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"




