


[package]
name = "bldr"
version = "0.1.0"
authors = [ "David Boon <david.boon@gmail.com" ]


description = "A distributed scheduling and system"
readme = "README.md"
keywords = ["continuous delivery", "build"]

homepage = "https://github.com/evadnoob/rustoleum"
repository = "https://github.com/evadnoob/rustoleum"
documentation = "https://evadnoob.github.io/rustoleum/"

license = "MIT"

[dependencies]
hyper = "0.5.0"
docopt = "0.6.67"
rustc-serialize = "*"
log = "0.3.1"
env_logger = "0.3.1"
time = "0.1"
libc = "0.1"
git2 = "0.3"
nanomsg = "^0.3.4"
nix = "*"
glob = "*"
term = "0.2"
syntex_syntax = "^0.7.0"
serde = "0.4"
#serde_macros = "0.4.1"


[dependencies.readline]
git = "https://github.com/evadnoob/rust-readline.git"




